--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
-  "Hello moon!"
+  <p>"Hello moon!" </p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
