--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1> Title </h1>
   <h2> Subitle </h2>
 
-  <p>"Hello moon!" </p>
+  <p> <em>"Hello moon!"</em> </p>
 
   <p> "Hello world!"  </P>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
