Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <p> <em>"Hello moon!"</em> </p>
 
-  <p> "Hello world!"  </P>
+  <p> <strong>"Hello world!" </strong>  </P>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
